fixed button content alignment issue happend in Buss post

--- a/components/src/core/components/Button/button.scss
+++ b/components/src/core/components/Button/button.scss
@@ -8,7 +8,7 @@
   border: 0;
   border-radius: 3em;
   cursor: pointer;
-  display: flex;
+  display: inline-block;
   align-items: center;
   padding-right: $oxd-button-horizontal-padding;
   padding-left: $oxd-button-horizontal-padding;
